hphp/hack/test/typecheck/namespace/use_conflict_const3.php
<?hh

use const FOO;

const int FOO = 0;
